DE20235: Fix column header alignment

--- a/src/apps/roadmapplanningboard/RoadmapPlanningBoardApp.less
+++ b/src/apps/roadmapplanningboard/RoadmapPlanningBoardApp.less
@@ -2,6 +2,10 @@
     height: 100%;
 }
 
+.roadmap-board .fixed-header-card-board-body-container {
+  overflow-y: scroll;
+}
+
 .roadmap-board .no-drag-select {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
